ui changes config and moz

--- a/style/grid.css
+++ b/style/grid.css
@@ -52,3 +52,24 @@
 .item12 {
     grid-area: 4 / 3 / 5 / 4;
 }
+
+.shrink75 {
+    -webkit-transform: scale(0.75);
+    -moz-transform: scale(0.75);
+    -ms-transform: scale(0.75);
+    transform: scale(0.75);
+}
+
+.shrink50 {
+    -webkit-transform: scale(0.5);
+    -moz-transform: scale(0.5);
+    -ms-transform: scale(0.5);
+    transform: scale(0.5);
+}
+
+.shrink25 {
+    -webkit-transform: scale(0.25);
+    -moz-transform: scale(0.25);
+    -ms-transform: scale(0.25);
+    transform: scale(0.25);
+}
