--- a/style/style.css
+++ b/style/style.css
@@ -30,7 +30,7 @@
     --operationColor: transparent;
     --operationBorderColor: transparent;
     --operationSelectedBorderColor: #0000FF;
-    --operationSettedColor: #99ff00;
+    --operationSettedColor: transparent;
     --operationDraggingColor: #009dff;
     --operationOrphanColor: transparent;
     --operationBorderWidth: 3px;
@@ -358,6 +358,17 @@ body {
     height: 25px;
     background: no-repeat;
     background-image: url('../images/fIcon.png');
+}
+
+.fIconSetted {
+    float: left;
+    margin-right: 14px;
+    margin-top: 1.35px;
+    margin-left: 5px;
+    width: 24px;
+    height: 25px;
+    background: no-repeat;
+    background-image: url('../images/fIconSetted.png');
 }
 
 .overflowDis {
