--- a/style/boxes.css
+++ b/style/boxes.css
@@ -44,6 +44,8 @@
 .inputBox {
     padding-top: 0.25%;
     padding-bottom: 1%;
+    padding-left: 20px;
+    padding-right: 20px;
     width: 500px;
     height: auto;
     text-align: center;
