link context menu created

--- a/style/menu.css
+++ b/style/menu.css
@@ -55,7 +55,7 @@
     z-index: 29;
     width: 150px;
     background: #ffffff;
-    border-radius: 5px;
+    /* border-radius: 5px; */
 }
 
 .context-menu .item {
