--- a/style/buttonTooltips.css
+++ b/style/buttonTooltips.css
@@ -1,22 +1,24 @@
 /* Tooltip text */
 
 .menubutton {
-    background-color: white;
-    outline-color: black;
+    /* background-color: white; */
+    /* outline-color: black; */
     /* width: 40px; */
     width: auto;
-    height: 48.8px;
+    min-width: 50px;
+    height: 52.8px;
     resize: horizontal;
     display: inline-block;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     padding-left: 3px;
     padding-right: 3px;
     padding-top: 2px;
-    margin: 2px 4px;
+    padding-bottom: 2px;
+    margin: 2px 2px;
     cursor: pointer;
     z-index: 2;
     border-radius: 6px;
-    box-shadow: 4px 6px 3px rgb(0 0 0 / 40%);
+    /* box-shadow: 4px 6px 3px rgb(0 0 0 / 40%); */
 }
 
 .menubutton .tooltipText {
@@ -46,9 +48,14 @@
     opacity: 1;
 }
 
+.menubutton:hover {
+    background-color: #ccc;
+}
+
 .buttonName {
     text-align: center;
     font-size: 12px;
     padding-left: 3px;
     padding-right: 3px;
+    margin-top: 2px;
 }
