panning mode ok

--- a/style/style.css
+++ b/style/style.css
@@ -484,6 +484,12 @@ hr.solid {
     border: var(--componentTextBorderWidth) solid black;
     background-color: var(--componentTextBackgroundColor);
     white-space: nowrap;
+    -webkit-user-drag: none;
+    -moz-user-select: none;
+    user-drag: none;
+    user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
 }
 
 .focusName {
