--- a/style/buttonTooltips.css
+++ b/style/buttonTooltips.css
@@ -10,6 +10,8 @@
     resize: horizontal;
     display: inline-block;
     /* border: 1px solid black; */
+    /* color: #70747c; */
+    color: black;
     padding-left: 3px;
     padding-right: 3px;
     padding-top: 2px;
@@ -17,19 +19,18 @@
     margin: 2px 2px;
     cursor: pointer;
     z-index: 2;
-    border-radius: 6px;
+    /* border-radius: 6px; */
     /* box-shadow: 4px 6px 3px rgb(0 0 0 / 40%); */
 }
 
 .menubutton .tooltipText {
     visibility: hidden;
     width: 120px;
-    height: auto;
-    background-color: #555;
-    color: #fff;
+    height: 21px;
+    background-color: #FFFFFF;
+    color: black;
     text-align: center;
-    padding: 5px 0;
-    border-radius: 6px;
+    /* border-radius: 6px; */
     /* Position the tooltip text */
     position: absolute;
     z-index: 1;
@@ -38,6 +39,8 @@
     /* Fade in tooltip */
     opacity: 0;
     transition: opacity 0.3s;
+    outline: 1px solid #557da5;
+    font-size: 12px;
 }
 
 
@@ -46,10 +49,11 @@
 .menubutton:hover .tooltipText {
     visibility: visible;
     opacity: 1;
+    margin-left: -2px;
 }
 
 .menubutton:hover {
-    background-color: #ccc;
+    background-color: #cfcfcf;
 }
 
 .buttonName {
