--- a/style/menu.css
+++ b/style/menu.css
@@ -56,6 +56,8 @@
     width: 150px;
     background: #ffffff;
     /* border-radius: 5px; */
+    border: 1px solid #ccc;
+    box-shadow: 2px 3px 3px rgb(0 0 0 / 40%)
 }
 
 .context-menu .item {
