--- a/style/style.css
+++ b/style/style.css
@@ -153,7 +153,7 @@
 
 .workspace {
     /* float: left; */
-    height: 140%;
+    height: inherit;
     width: inherit;
     margin-left: -10px;
     /* background-color: rgb(210, 212, 236); */
