--- a/style/style.css
+++ b/style/style.css
@@ -122,11 +122,8 @@
 
 .tabcontent {
     display: none;
-    padding: 6px 12px;
-    /* border: 1px solid #ccc; */
-    border-top: none;
-    border-left: none;
-    border-right: none;
+    height: 100%;
+    padding: 7px 12px;
 }
 
 #up_tab {
@@ -155,7 +152,6 @@
     /* float: left; */
     height: inherit;
     width: inherit;
-    margin-left: -10px;
     /* background-color: rgb(210, 212, 236); */
     z-index: 2;
 }
