--- a/style/boxes.css
+++ b/style/boxes.css
@@ -60,13 +60,13 @@
 }
 
 .configurationBox {
-    padding-top: 0.25%;
-    padding-bottom: 1%;
+    border: 2px solid #768ca1;
+    padding-bottom: 5px;
     width: 720px;
     height: auto;
     text-align: center;
     color: #525252;
-    background-color: #e7e5e5;
+    background-color: #f1f1f1;
     font-family: Arial, Helvetica, sans-serif;
     left: 32.5%;
     top: 5%;
@@ -75,19 +75,19 @@
 }
 
 .layerInfoBox {
-    padding-bottom: 5px;
     padding-top: 15px;
     width: fit-content;
     height: auto;
     text-align: center;
     color: #525252;
-    background-color: #e7e5e5;
+    background-color: #FFFFFF;
     font-family: Arial, Helvetica, sans-serif;
     left: 8px;
     top: 51.3%;
     position: absolute;
     z-index: 48;
     cursor: grab;
+    outline: 1px solid rgb(204, 204, 204);
 }
 
 .cancelButton {
@@ -275,24 +275,24 @@ select {
 }
 
 .layerInfoHint {
-    width: 40px;
-    height: 40px;
+    width: 28px;
+    height: 28px;
     background-image: url(../images/circleHelp.png);
     background-size: contain;
     cursor: pointer;
 }
 
 .layerInfoHintPressed {
-    width: 40px;
-    height: 40px;
+    width: 28px;
+    height: 28px;
     background-image: url(../images/greenHelp.png);
     background-size: contain;
     cursor: pointer;
 }
 
 .disabledInfoHint {
-    width: 38px;
-    height: 38px;
+    width: 28px;
+    height: 28px;
     background-image: url(../images/disabledCircleHelp.png);
     background-size: contain;
 }
