--- a/style/boxes.css
+++ b/style/boxes.css
@@ -43,7 +43,7 @@
 
 .inputBox {
     padding-top: 0.25%;
-    padding-bottom: 1%;
+    padding-bottom: 15px;
     padding-left: 20px;
     padding-right: 20px;
     width: 500px;
