radio buttons replaced

--- a/style/form.css
+++ b/style/form.css
@@ -201,6 +201,7 @@ textarea:focus-visible {
 /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
 
 @media screen and (max-width: 600px) {
+
     .col-25,
     .col-75,
     input[type=submit] {
@@ -354,6 +355,7 @@ textarea:focus-visible {
         border-radius: 30px;
         border: 2px solid #FFFFFF;
     }
+
     .toggle:after {
         content: '';
         position: absolute;
@@ -413,10 +415,10 @@ textarea:focus-visible {
 
 .inputTextClass {
     border-radius: 0px !important;
-    outline: 0;
 }
 
 .inputTextClass:focus-visible {
+    outline: 1px solid black;
     border-radius: 0px !important;
 }
 
