--- a/style/boxes.css
+++ b/style/boxes.css
@@ -13,13 +13,15 @@
     z-index: 48;
 }
 
+/* #387627 */
 .updatingBox {
-    padding: 17px;
+    padding: 10px;
     width: fit-content;
     height: fit-content;
     text-align: center;
-    color: #525252;
-    background-color: #cedff7;
+    color: #427b44;
+    background-color: #cbf3dc;
+    border: 2px solid #afebc8;
     font-family: Arial, Helvetica, sans-serif;
     left: 32.5%;
     top: 5%;
