--- a/style/form.css
+++ b/style/form.css
@@ -418,10 +418,10 @@ textarea:focus-visible {
 }
 
 .inputTextClass:focus-visible {
-    outline: 1px solid black;
     border-radius: 0px !important;
 }
 
 .inputTextClass:focus {
     border-radius: 0px !important;
+    outline: 0.5px solid rgb(100, 100, 100);
 }
