--- a/style/boxes.css
+++ b/style/boxes.css
@@ -3,7 +3,7 @@
     width: 500px;
     height: auto;
     text-align: center;
-    border: 2px solid #768ca1;
+    outline: 2px solid #768ca1;
     color: #525252;
     background-color: #e7e5e5;
     font-family: Arial, Helvetica, sans-serif;
@@ -21,7 +21,7 @@
     text-align: center;
     color: #427b44;
     background-color: #cbf3dc;
-    border: 2px solid #afebc8;
+    outline: 2px solid #afebc8;
     font-family: Arial, Helvetica, sans-serif;
     left: 32.5%;
     top: 5%;
@@ -32,7 +32,7 @@
 .selectingBox {
     width: 250px;
     height: 165px;
-    border: 2px solid #768ca1;
+    outline: 2px solid #768ca1;
     text-align: center;
     color: #525252;
     background-color: #e7e5e5;
@@ -53,7 +53,7 @@
     text-align: center;
     color: #525252;
     background-color: #f1f1f1;
-    border: 2px solid #768ca1;
+    outline: 2px solid #768ca1;
     font-family: Arial, Helvetica, sans-serif;
     left: 32.5%;
     top: 5%;
@@ -62,7 +62,7 @@
 }
 
 .configurationBox {
-    border: 2px solid #768ca1;
+    outline: 2px solid #768ca1;
     padding-bottom: 5px;
     width: 720px;
     height: auto;
@@ -151,6 +151,7 @@
     -ms-user-select: none;
     user-select: none;
     cursor: pointer;
+    background-size: contain;
 }
 
 select {
