--- a/style/style.css
+++ b/style/style.css
@@ -345,6 +345,7 @@ body {
     user-select: none;
     overflow: scroll;
     padding-bottom: 12px;
+    padding-top: 3px;
     background-color: white;
     border: 1px solid #ccc;
 }
@@ -360,7 +361,7 @@ body {
     padding-bottom: 4px;
     box-sizing: border-box;
     margin-left: 5px;
-    margin-top: calc(var(--operationBorderWidth) + 5px);
+    margin-top: calc(var(--operationBorderWidth));
     z-index: 11;
     display: inline-block;
     background-color: var(--operationColor);
@@ -428,7 +429,7 @@ body {
     margin-left: 5px;
     margin-right: 5px;
     display: inline-block;
-    margin-top: calc(var(--operationBorderWidth) + 5px);
+    margin-top: calc(var(--operationBorderWidth));
     background-color: var(--operationColor);
     border-color: var(--operationSelectedBorderColor);
 }
