--- a/style/ZoomSlider.css
+++ b/style/ZoomSlider.css
@@ -7,6 +7,7 @@
     height: 25px;
     top: 0px;
     left: 0px;
+    cursor: pointer;
 }
 
 .zoomButton {
@@ -16,12 +17,16 @@
     padding: 0;
     margin: 0;
     transition: opacity .2s;
+    margin-top: 2px;
+    cursor: pointer;
+
 }
 
 .zoomRangeContainer {
     display: inline-block;
     vertical-align: top;
     padding: 0;
+
 }
 
 .zoomRangeInput {
@@ -39,7 +44,7 @@
     border: none;
     width: 100%;
     height: 3px;
-    background: #ccc;
+    background: #e8f5c8;
 }
 
 .zoomRangeInput::-moz-range-track {
@@ -47,7 +52,7 @@
     border: none;
     width: 100%;
     height: 3px;
-    background: #ccc;
+    background: #e8f5c8;
 }
 
 .zoomRangeInput::-ms-track {
@@ -55,7 +60,7 @@
     border: none;
     width: 100%;
     height: 3px;
-    background: #ccc;
+    background: #e8f5c8;
     color: transparent;
 }
 
@@ -67,7 +72,9 @@
     width: 10px;
     height: 10px;
     border-radius: 50%;
-    background: #444;
+    background: linear-gradient(to bottom, #BEC6FF 0%, #6D7192 100%);
+    cursor: pointer;
+
 }
 
 .zoomRangeInput::-moz-range-thumb {
@@ -76,7 +83,8 @@
     width: 10px;
     height: 10px;
     border-radius: 50%;
-    background: #444;
+    background: linear-gradient(to bottom, #BEC6FF 0%, #6D7192 100%);
+    cursor: pointer;
 }
 
 .zoomRangeInput::-ms-thumb {
@@ -86,7 +94,8 @@
     width: 10px;
     height: 10px;
     border-radius: 50%;
-    background: #444;
+    background: linear-gradient(to bottom, #BEC6FF 0%, #6D7192 100%);
+    cursor: pointer;
 }
 
 .zoomRangeInput::-ms-tooltip,
